--- a/project/donate.html
+++ b/project/donate.html
@@ -1,26 +1,39 @@
 ---
 layout: 'page'
-title: CSS or SCSS!
+title: This is an experiment!
 ---
+<!DOCTYPE html>
+<html lang="en">
 
+  <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>About</title>
+  <meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search resu...">
+
+  <link rel="stylesheet" href="/assets/main.css">
+  <link rel="canonical" href="/about/">
+  <link rel="alternate" type="application/rss+xml" title="Your awesome title" href="/feed.xml">
+  
+  
+</head>
 <h2>Css versus Scss</h2>
-<h3>The big question involves:</h3>
-<ul>
-    <li>CSS</li>
-    <li>AND!</li>
-    <li>SCSS</li>
-</ul>
+<h4>The big question involves: css and scss</h4>
 <div class="banner">
         <div class="slogan">
           <span>
             LET THE BATTLE COMMENCE!
+            <br>
+            lets pretend in here, is an awesome battleground background
           </span>
-        </div>  
+        </div>
       </div>
 <cite>
-    <mark>Cascading Style Sheets (CSS)</mark> is a style sheet language used for describing the presentation of a document written in a markup language.[1] Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications
+    <mark>Cascading Style Sheets (CSS)</mark> Basic -
 </cite>
 <hr>
 <cite>
-        <mark>Sass (syntactically awesome stylesheets)</mark> is a style sheet language initially designed by Hampton Catlin and developed by Natalie Weizenbaum.[2][3] After its initial versions, Weizenbaum and Chris Eppstein continued to extend Sass with SassScript, a simple scripting language used in Sass files
+        <mark>Sass (syntactically awesome stylesheets)</mark> Completion to basic -
 </cite>
